# duckdb

./: .gitmodules
extension/: extension_config.cmake
extension/differential_privacy/: CMakeLists.txt  README.md  differential_privacy_extension.cpp  dp_parser.cpp  duckdp_state.cpp
extension/differential_privacy/OpenDP/: opendp.h
extension/differential_privacy/functions/: CMakeLists.txt  noise_scalar_function.cpp  sum_optimizer_function.cpp
extension/differential_privacy/include/: dp_parser.hpp  duckdp_extension_callback.hpp  duckdp_state.hpp  functions.hpp  pragma.hpp
extension/differential_privacy/pragma/: CMakeLists.txt  add_bounds_to_column.cpp  add_null_replacement.cpp  make_table_private.cpp
extension/differential_privacy/scripts/: add_opendp_as_submodule.sh  compile_opendp.sh
test/differential_privacy/: dp_sum.test
tools/pythonpkg/duckdb-stubs/: __init__.pyi
